Devin Anderson
Josh Green
Mario Lang
Arnold Krille
Jan Engelhardt
Adrian Knoth
David Garcia Garzon
Valerio Pilo

---------------------------
  Jackdmp changes log
---------------------------

2011-04-01 Stephane Letz  <letz@grame.fr>

	* Merge newer-midi branch (Devin Anderson redesign of the MIDI drivers: alsarawmidi, ffado, coremidi and winmme).
	* Cleanup JackThreadedDriver::Stop.

2011-03-30 Stephane Letz  <letz@grame.fr>

	* Version 1.9.8 started. 

2011-03-29 Stephane Letz  <letz@grame.fr>

	* Synchronize JackWeakAPI.cpp with new APIs. 

2011-03-28 Stephane Letz  <letz@grame.fr>

	* Correction of jack_connect/jack_disconnect: use of jack_activate and volatile keyword for thread shared variable.
	* Correction of JackNetOneDriver for latest CELT API.

2011-03-24 Stephane Letz  <letz@grame.fr>

	* Implement renaming in JackDriver::Open to avoid name collision (thanks Devin Anderson).
	* Correct alsa_driver_restart (thanks Devin Anderson).

2011-03-23 Stephane Letz  <letz@grame.fr>

	* Devin Anderson server-ctl-proposal branch merged on trunk: improved control API, slave backend reworked.

2011-03-14 Stephane Letz  <letz@grame.fr>

	* Correct JackEngine::NotifyGraphReorder, update JackDebugClient with latest API.

2011-03-13 Stephane Letz  <letz@grame.fr>

	* Rework internal slave driver management, JackServerGlobals now handle same parameters as jackdmp.

2011-03-11 Stephane Letz  <letz@grame.fr>

	* Correct JackNetMaster::SetBufferSize.
	* Use jack_default_audio_sample_t instead of float consistently, fix ticket #201."
	* -X now allows to add several slave backends, add -I to load several internal clients.

2011-03-10 Stephane Letz  <letz@grame.fr>

	* Latency callback must always be activated.
	* Correct TopologicalSort. 
	* Add jack_midi_dump client.
	* Synchronize netjack1 with JACK1 version.
	* Synchronize jack_connect/jack_disconnect with JACK1 version.

2011-03-09 Stephane Letz  <letz@grame.fr>

	* jack_client_has_session_callback implementation.