@@ -38,6 +38,7 @@ Valerio Pilo
 
 	* Merge newer-midi branch (Devin Anderson redesign of the MIDI drivers: alsarawmidi, ffado, coremidi and winmme).
 	* Cleanup JackThreadedDriver::Stop.
+	* Correct JackNetOneDriver::Close.
 
 2011-03-30 Stephane Letz  <letz@grame.fr>
 
